--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "infinite-viewport",
   "version": "0.1.0",
   "private": true,
+  "main": "src/index.js",
   "dependencies": {
     "airr-react": "^3.1.2",
     "react": "^16.8.6",
