sidepanel api update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "airr-react Component's API",
+  "name": "airr-react-component-api",
   "version": "0.1.0",
   "private": true,
   "main": "src/index.js",
